[gd_scene load_steps=30 format=3 uid="uid://c57035nuv7s28"]

[ext_resource type="Script" uid="uid://b1g3t142v86an" path="res://ch_2_lvl_1_3.gd" id="1_ittru"]
[ext_resource type="Texture2D" uid="uid://bfhypggh5tkro" path="res://Background/Brown.png" id="1_kqm7q"]
[ext_resource type="Texture2D" uid="uid://tbpkdw828swb" path="res://objects/Orange_block.png" id="2_sb48t"]
[ext_resource type="PackedScene" uid="uid://c6tnrclb70hyi" path="res://Character/player.tscn" id="3_ufrq6"]
[ext_resource type="PackedScene" uid="uid://dgo2istfpbd03" path="res://camera/camera_2d.tscn" id="4_sb48t"]
[ext_resource type="Texture2D" uid="uid://ceh0q2psmb6o7" path="res://objects/28_cookies.png" id="5_ufrq6"]
[ext_resource type="FontFile" uid="uid://yxkfm7fo5bvx" path="res://Button/m3x6.ttf" id="7_qefq7"]
[ext_resource type="AudioStream" uid="uid://p03u12yuer08" path="res://Sounds/Wood Block3.ogg" id="8_qefq7"]
[ext_resource type="AudioStream" uid="uid://lsbjwctespjp" path="res://Sounds/sound4.mp3" id="9_5ap52"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5rqfn"]
texture = ExtResource("2_sb48t")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_ittru"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_5rqfn")

[sub_resource type="CircleShape2D" id="CircleShape2D_5rqfn"]
radius = 11.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmu1w"]
size = Vector2(159, 167)

[sub_resource type="Animation" id="Animation_qefq7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel2:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ittru"]
resource_name = "get_cookie_ani"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel2:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_tmu1w"]
resource_name = "get_cookie_ani_inverted"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel2:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ap52"]
_data = {
&"RESET": SubResource("Animation_qefq7"),
&"get_cookie_ani": SubResource("Animation_ittru"),
&"get_cookie_ani_inverted": SubResource("Animation_tmu1w")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ittru"]
size = Vector2(64.1818, 65.0636)

[sub_resource type="Animation" id="Animation_ofd6p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KillerWall:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16.5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KillerWall:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(579, 38)]
}

[sub_resource type="Animation" id="Animation_5ap52"]
resource_name = "Wall"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KillerWall:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16.5, 1), Vector2(16.5, 9.32813)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KillerWall:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(579, 38), Vector2(579, 304.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v43cm"]
_data = {
&"RESET": SubResource("Animation_ofd6p"),
&"Wall": SubResource("Animation_5ap52")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qefq7"]
size = Vector2(101.09, 194.88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ap52"]
size = Vector2(403, 107)

[sub_resource type="Animation" id="Animation_tv2vj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody2D/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.53125, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-17, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StaticBody2D/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_v43cm"]
resource_name = "Wall2down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody2D/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-17, 0), Vector2(-17, 70)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.53125, 1), Vector2(1.53125, 3.1875)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-16.375, -18), Vector2(-17.375, 50)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StaticBody2D/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vrt2u"]
_data = {
&"RESET": SubResource("Animation_tv2vj"),
&"Wall2down": SubResource("Animation_v43cm")
}

[sub_resource type="Animation" id="Animation_at1ld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_dfjjl"]
resource_name = "death-text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sd18g"]
_data = {
&"RESET": SubResource("Animation_at1ld"),
&"death-text": SubResource("Animation_dfjjl")
}

[node name="ch2_lvl1_3" type="Node2D"]
script = ExtResource("1_ittru")

[node name="Brown" type="Sprite2D" parent="."]
position = Vector2(569, 318)
scale = Vector2(18.4062, 10.3125)
texture = ExtResource("1_kqm7q")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ittru")
format = 2
layer_0/tile_data = PackedInt32Array(131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 655359, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 589824, 0, 0, 65535, 0, 0, 0, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, 1, 0, 0, -65534, 0, 0, 2, 0, 0, -65533, 0, 0, 3, 0, 0, -65532, 0, 0, 4, 0, 0, -65531, 0, 0, 5, 0, 0, -65530, 0, 0, 6, 0, 0, -65529, 0, 0, 7, 0, 0, -65528, 0, 0, 8, 0, 0, -65527, 0, 0, 9, 0, 0, -65526, 0, 0, 10, 0, 0, -65525, 0, 0, 11, 0, 0, -65524, 0, 0, 12, 0, 0, -65523, 0, 0, 13, 0, 0, -65522, 0, 0, 14, 0, 0, -65521, 0, 0, 15, 0, 0, -65520, 0, 0, 16, 0, 0, -65519, 0, 0, 17, 0, 0, -65518, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, -65517, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 720895, 0, 0, 655360, 0, 0, 589825, 0, 0, 655361, 0, 0, 589826, 0, 0, 655362, 0, 0, 589827, 0, 0, 655363, 0, 0, 589828, 0, 0, 655364, 0, 0, 589829, 0, 0, 655365, 0, 0, 589830, 0, 0, 655366, 0, 0, 589831, 0, 0, 655367, 0, 0, 589832, 0, 0, 655368, 0, 0, 589833, 0, 0, 655369, 0, 0, 589834, 0, 0, 655370, 0, 0, 589835, 0, 0, 655371, 0, 0, 589836, 0, 0, 655372, 0, 0, 589837, 0, 0, 655373, 0, 0, 589838, 0, 0, 655374, 0, 0, 589839, 0, 0, 655375, 0, 0, 589840, 0, 0, 655376, 0, 0, 589841, 0, 0, 655377, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0)

[node name="Player" parent="." instance=ExtResource("3_ufrq6")]
position = Vector2(43, 525)

[node name="Camera2D" parent="." instance=ExtResource("4_sb48t")]
position = Vector2(579, 321)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1050, 542)
scale = Vector2(2, 2)
texture = ExtResource("5_ufrq6")

[node name="fake_cookie_area" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/fake_cookie_area"]
shape = SubResource("CircleShape2D_5rqfn")

[node name="get_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="get_area"]
position = Vector2(-81, 510)
shape = SubResource("RectangleShape2D_tmu1w")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 382.0
offset_top = 361.0
offset_right = 820.0
offset_bottom = 448.0
theme_override_fonts/normal_font = ExtResource("7_qefq7")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[shake]Get the cookie first  "
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 587.0
offset_top = 347.0
offset_right = 877.0
offset_bottom = 402.0
theme_override_fonts/normal_font = ExtResource("7_qefq7")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[shake](⋋▂⋌)"
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="getCookie" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5ap52")
}

[node name="KillerWall" type="Sprite2D" parent="."]
position = Vector2(579, 38)
scale = Vector2(16.5, 1)
texture = ExtResource("2_sb48t")
metadata/_edit_group_ = true

[node name="KillerWall_Area" type="Area2D" parent="KillerWall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillerWall/KillerWall_Area"]
position = Vector2(0.0302963, -0.468178)
shape = SubResource("RectangleShape2D_ittru")

[node name="Wall animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v43cm")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(27, 415)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(-17, 0)
scale = Vector2(1.53125, 1)
texture = ExtResource("2_sb48t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-17, 0)
shape = SubResource("RectangleShape2D_qefq7")

[node name="DetectForWall2" type="Area2D" parent="."]
position = Vector2(348, 578)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectForWall2"]
position = Vector2(-40.5, 43.5)
shape = SubResource("RectangleShape2D_5ap52")

[node name="Wall2Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vrt2u")
}

[node name="WallSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_qefq7")
volume_db = 9.0
pitch_scale = 3.0

[node name="Wall2_soundTimer" type="Timer" parent="."]
one_shot = true

[node name="Wall1_soundTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Wall2_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_qefq7")
volume_db = 9.0
pitch_scale = 3.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.5
offset_top = -20.0
offset_right = 266.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
bbcode_enabled = true
text = "[shake]Press [rainbow]Enter[/rainbow] to Replay[/shake]"
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sd18g")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_5ap52")
volume_db = 2.0

[connection signal="body_entered" from="Sprite2D/fake_cookie_area" to="." method="_on_fake_cookie_area_body_entered"]
[connection signal="body_entered" from="get_area" to="." method="_on_get_area_body_entered"]
[connection signal="body_exited" from="get_area" to="." method="_on_get_area_body_exited"]
[connection signal="body_entered" from="KillerWall/KillerWall_Area" to="." method="_on_killer_wall_area_body_entered"]
[connection signal="body_entered" from="DetectForWall2" to="." method="_on_detect_for_wall_2_body_entered"]
